Adding the number information

--- a/Quarterly Checkins/QC-2019-Q1.md
+++ b/Quarterly Checkins/QC-2019-Q1.md
@@ -1,5 +1,14 @@
 # Quarterly Check-in 2019 Q1
 
+## Summary
+
+|Category| Number |
+| --- | :---: | 
+| Incoming issues | 20 |
+| Enhancements requests | 15 |
+| Enhancements/Issues addressed | 20 |
+| Contributions from community | 4 |
+
 ## Work accomplished
 
 The following table highlights important enhancements and bug fixes done in the Test Platform in the given period.
@@ -34,4 +43,11 @@ The following table highlights the top contributors
 
 
 ## What's Next ?
+Here is the list of top issues/ehancements that will be picked up in the next quarter.
 
+| Issue | Link  |
+| ---- | ---- |
+| Merge dotnet test and dotnet vstest | [#1453](https://github.com/Microsoft/vstest/issues/1453) |
+| Remove dependencies from Microsoft.Net.Test.Sdk | [#1764](https://github.com/Microsoft/vstest/issues/1764) |
+| Support wildcards in filenames for vstest.console.exe | [#1663](https://github.com/Microsoft/vstest/issues/1663) |
+| Enable dependency flow | [#1941](https://github.com/Microsoft/vstest/issues/1941) |
