Corrected the numbers

--- a/Quarterly Checkins/QC-2019-Q1.md
+++ b/Quarterly Checkins/QC-2019-Q1.md
@@ -2,23 +2,25 @@
 
 ## Summary
 
-|Category| Number |
-| --- | :---: | 
-| Incoming issues | 20 |
-| Enhancements requests | 15 |
-| Enhancements/Issues addressed | 20 |
-| Contributions from community | 4 |
+|Category| Incoming | Outgoing |
+| --- | :---: |  :---: | 
+| Total issues | 69 | 80 |
+| Enhancements | 13 | 8 |
+| Bugs | 7 | 13 |
 
 ## Work accomplished
 
 The following table highlights important enhancements and bug fixes done in the Test Platform in the given period.
 
-| Issues | PR | Remarks  |
-| --- | -- | -- |
-| Add support for xplat vstest console in translationlayer |   [#1893](https://github.com/Microsoft/vstest/pull/1893)|  Users can now use translation layer across all platforms as now user can invoke dotnet with vstest.console.dll for running the tests in design mode. |
-| Allow external use of the TRX Logger |   [#1792](https://github.com/Microsoft/vstest/pull/1792) |  Make the TRX Logger public, as described in [#1791](https://github.com/Microsoft/vstest/pull/1792) |
-|Use log in VSTestLogsTask |  [#1882](https://github.com/Microsoft/vstest/pull/1882)|After this change, log messages are printed to all configured loggers, with the build start/completion messages only at normal verbosity or higher, and the IsTestProject property message at detailed verbosity or higher. |
-| Add missing Utilities dependency to netstandard1.5 | [#1913](https://github.com/Microsoft/vstest/pull/1913)| Added Microsoft.TestPlatform.Utilities.dll to netstandard1.5 folder of Microsoft.TestPlatform.TestHost, since this is a dependent assembly to some of the other assemblies in that folder. |
+| Issue | Remarks  |
+| --- | -- |
+| [#1893](https://github.com/Microsoft/vstest/pull/1893)|  Enable usage for Translation layer across all platforms by adding ability to launch dotnet with vstest.console.dll for running the tests in design mode. |
+| [#1792](https://github.com/Microsoft/vstest/pull/1792) |  Allow external use of the TRX Logger as described in [#1791](https://github.com/Microsoft/vstest/pull/1791). |
+| [#1882](https://github.com/Microsoft/vstest/pull/1882) | Log messages will be printed to all configured loggers, with the build start/completion messages only at normal verbosity or higher, and the IsTestProject property message at detailed verbosity or higher. |
+| [#1913](https://github.com/Microsoft/vstest/pull/1913)| Added Microsoft.TestPlatform.Utilities.dll to netstandard1.5 folder of Microsoft.TestPlatform.TestHost, since this is a dependent assembly to some of the other assemblies in that folder. |
+| [#1906](https://github.com/Microsoft/vstest/pull/1906) | Ability to run NETFramework 3.5 tests in compat mode. |
+|[#1843](https://github.com/Microsoft/vstest/pull/1843)| Made translation layer connection timeouts are configurable. |
+|[#1881](https://github.com/Microsoft/vstest/pull/1881) | Avoid usage of JsonConvert in test host process. |
 
 ## Top Contributors
 
@@ -45,9 +47,9 @@ The following table highlights the top contributors
 ## What's Next ?
 Here is the list of top issues/ehancements that will be picked up in the next quarter.
 
-| Issue | Link  |
+| Issue | Description  |
 | ---- | ---- |
-| Merge dotnet test and dotnet vstest | [#1453](https://github.com/Microsoft/vstest/issues/1453) |
-| Remove dependencies from Microsoft.Net.Test.Sdk | [#1764](https://github.com/Microsoft/vstest/issues/1764) |
-| Support wildcards in filenames for vstest.console.exe | [#1663](https://github.com/Microsoft/vstest/issues/1663) |
-| Enable dependency flow | [#1941](https://github.com/Microsoft/vstest/issues/1941) |
+| [#1453](https://github.com/Microsoft/vstest/issues/1453) | Merge dotnet test and dotnet vstest | 
+| [#1663](https://github.com/Microsoft/vstest/issues/1663) | Support wildcards in filenames for vstest.console.exe |
+| [#1764](https://github.com/Microsoft/vstest/issues/1764) | [Engineering] Remove dependencies from Microsoft.Net.Test.Sdk |
+| [#1941](https://github.com/Microsoft/vstest/issues/1941) | [Engineering] Enable dependency flow | 
