--- a/Quarterly Checkins/QC-2019-Q1.md
+++ b/Quarterly Checkins/QC-2019-Q1.md
@@ -4,9 +4,9 @@
 
 |Category| Incoming | Outgoing |
 | --- | :---: |  :---: | 
-| Total issues | 69 | 80 |
-| Enhancements | 13 | 8 |
-| Bugs | 7 | 13 |
+| Total issues | [63](https://github.com/Microsoft/vstest/issues?utf8=%E2%9C%93&q=is%3Aissue+created%3A2019-01-01..2019-03-31) | [63](https://github.com/Microsoft/vstest/issues?page=1&q=is%3Aissue+closed%3A2019-01-01..2019-03-31&utf8=%E2%9C%93) |
+| Enhancements | [13](https://github.com/Microsoft/vstest/issues?utf8=%E2%9C%93&q=is%3Aissue+created%3A2019-01-01..2019-03-31+label%3Aenhancement) | [8](https://github.com/Microsoft/vstest/issues?utf8=%E2%9C%93&q=is%3Aissue+closed%3A2019-01-01..2019-03-31+label%3Aenhancement) |
+| Bugs | [8](https://github.com/Microsoft/vstest/issues?utf8=✓&q=is%3Aissue+created%3A2019-01-01..2019-03-31+label%3Abug) | [12](https://github.com/Microsoft/vstest/issues?utf8=%E2%9C%93&q=is%3Aissue+closed%3A2019-01-01..2019-03-31+label%3Abug) |
 
 ## Work accomplished
 
@@ -19,10 +19,10 @@ The following table highlights important enhancements and bug fixes done in the 
 | [#1882](https://github.com/Microsoft/vstest/pull/1882) | Log messages will be printed to all configured loggers, with the build start/completion messages only at normal verbosity or higher, and the IsTestProject property message at detailed verbosity or higher. |
 | [#1913](https://github.com/Microsoft/vstest/pull/1913)| Added Microsoft.TestPlatform.Utilities.dll to netstandard1.5 folder of Microsoft.TestPlatform.TestHost, since this is a dependent assembly to some of the other assemblies in that folder. |
 | [#1906](https://github.com/Microsoft/vstest/pull/1906) | Ability to run NETFramework 3.5 tests in compat mode. |
-|[#1843](https://github.com/Microsoft/vstest/pull/1843)| Made translation layer connection timeouts are configurable. |
+|[#1843](https://github.com/Microsoft/vstest/pull/1843)| Made translation layer connection timeouts configurable. |
 |[#1881](https://github.com/Microsoft/vstest/pull/1881) | Avoid usage of JsonConvert in test host process. |
 
-## Top Contributors
+## Top External Contributors
 
 The following table highlights the top contributors
 
